[tool.poetry]
name = "tutoring_constraint_program"
version = "0.1.0"
description = "A program to schedule tutors using constraint programming"
authors = ["Derek Lee <derekclee323@g.ucla.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
ortools = "^9.6.2534"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
